# FastMagic

./: .gitignore  README.md  pyproject.toml
src/FastMagic/: __init__.py  generic_repo.py  generic_router.py  generic_service.py  schema_model.py
tests/: conftest.py  db.py  test_generic_repo.py  test_generic_router.py  test_schema_model.py  teste_service.py
