[project]
name = "fastmagic"
version = "0.1.0"
description = "Library to facilitate the creation of apis rest, prototyping quickly and giving better readability to projects that bring FastApi and sqlAlchemy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlalchemy>=2.0.49"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
